--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
+    "prop-types": "^15.7.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
     "react-redux": "5.0.6",
@@ -64,12 +65,12 @@
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.3.1",
     "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "^4.1.0",
-    "webpack": "^4.16.4"
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
